# vision

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  Score.uml  alexnet_results.txt  code_of_conduct.md  conda_score--alexnet_FreemanZiemba2013public.V1-pls.pkl  conda_score--alexnet_MajajHong2015public.IT-pls.pkl  conda_score--alexnet_MajajHong2015public.IT-reverse_pls.pkl  conda_score--pixels_MajajHong2015public.IT-pls.pkl  conda_score--resnet18_ecoset_full_FreemanZiemba2013public.V1-pls.pkl  conda_score--resnet34_ecoset_full_FreemanZiemba2013public.V1-pls.pkl  conda_score--resnet50_no_specular_iteration=1_MajajHong2015public.IT-pls.pkl  crossdomain_results_dict.pkl  draft.ipynb  environment.yml  environment_lock.yml  lookup.db  pyproject.toml  pytest.ini  resnet50_less_variation_iteration=5.ckpt  s3_replace_data.py  s3_replace_models.py  sample.ipynb  score-model-analysis.py  score-model.py  setup.py  test.ipynb  test_setup.sh
.github/workflows/: automerge_plugin-only_prs.yml  bump_version.yml  check_if_pr_is_automergeable.yml  check_test_status.py  cleanup_web_submissions.yml  create-pr.yml  handle-private-pr.yml  handle_metadata.yml  map_new_plugins.yml  metadata_testing.yml  score_new_plugins.yml  score_new_plugins_email.yml  score_new_plugins_testing.yml  score_new_private_plugins.yml  sync_develop_with_master.yml  test_plugins.yml  travis_trigger.sh  user_notification_system.yml  workflow_trigger.sh
brain_score.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
brainscore/: __init__.py  assemblies.py  benchmarks.py  entrypoint.py  fetch.py  knownfile.db  lookup.csv  model_interface.py  neuroids.py  public_benchmarks.py  stimuli.py  tolerance.py  utils.py
brainscore/assemblies/: __init__.py  private.py  public.py
brainscore/benchmarks/: README.md  Zhu2019.py  __init__.py  _neural_common.py  _neural_common_extra.py  _properties_common.py  baker2022.py  behavioral.py  benchmarks_index.yml  cadena2017.py  combined_benchmarks.py  domain_transfer_analysis.py  domain_transfer_neural.py  efficiency.py  freemanziemba2013.py  geirhos2021.py  geirhos2021_sketch.py  hebart2023.py  hermann2020.py  imagenet.py  imagenet_c.py  islam2021.py  jacob2020_3DProcessing.py  jacob2020_Occlusion_Depth_Ordering.py  jacob2022.py  kar2018.py  kar2018behavior.py  kar2019.py  loaders.py  majaj2015.py  majajhong2015.py  majajhong2015_combined.py  malania2007.py  marques2020_cavanaugh2002a.py  marques2020_devalois1982a.py  marques2020_devalois1982b.py  marques2020_freemanZiemba2013.py  marques2020_ringach2002.py  marques2020_schiller1976.py  neural.py  (+18 more)
brainscore/contrib/: benchmarks.py
brainscore/metrics/: __init__.py  above_chance_agreement.py  accuracy.py  accuracy_delta.py  anatomy.py  assembly_utils.py  behavior.py  ceiling.py  cka.py  cohen_kappa.py  correlation.py  data_cloud_comparision.py  dimensionality.py  distribution_similarity.py  error_consistency.py  image_level_behavior.py  mask_regression.py  neural_fit.py  neural_predictivity.py  nsd_algonauts_correlation.py  ost.py  pca.py  rdm.py  regression.py  regression_extra.py  response_match.py  temporal.py  temporal_metrics.py  threshold.py  transformations.py  transformations_extra.py  utils.py  xarray_utils.py  xarray_utils_extra.py
brainscore/submission/: __main__.py  configuration.py  database.py  db_schema.uml  developers_guide.md  evaluation.py  ml_pool.py  models.py  repository.py  test_models.py  utils.py  website_utils.py
brainscore/utils/: __init__.py  v1_properties_utils.py
brainscore_vision/: __init__.py  __main__.py  brainscore_unittest_trigger.txt  entrypoint.py  loading_test.ipynb  lookup.csv  model_interface.py
brainscore_vision/benchmark_helpers/: __init__.py  _neural_common.py  _properties_common.py  benchmark_costs.json  conftest.py  generic_plugin_tests.py  memory.py  multi_subject.py  neural_common.py  properties_common.py  screen.py  (+4 more)
docs/: UMI_MIGRATION.md  aws_user  requirements.txt
examples/: README.md  benchmarks.ipynb  data.ipynb  data_metrics_benchmarks.ipynb  four_assemblies.ipynb  loading.ipynb  metrics.ipynb  models.ipynb  score.ipynb  visual-search-benchmark.ipynb
migrations/: 2020-12-20_pkl_to_nc.py  20230211-integrate_model_submissions.sql  20230211-submission_ids.csv  20230211_submission_ids.csv  20230217-integrate_model_submissions.sh  20230217-integrate_model_submissions_manual_ids.csv  20230217-model_submissions_empty_init.sh  202302xx-integrate_model_submissions.sh  202302xxx-integrate_model_submissions.sh  20230409-find_private_submissions.sh
mkgu/: __init__.py  assemblies.py  benchmarks.py  fetch.py  knownfile.db  knownfile.py  lookup.db  lookup.py  metrics.py  points.py  presentations.py  stimuli.py  storage.py
model-tools/: .travis.yml  LICENSE  MANIFEST.in  README.md  setup.py
model_tools/: __init__.py  xarray_utils.py
notebooks/: hvm_example.ipynb
packaging/: separate_datasets.py
scratch/: 2017-09-25_sqlite_scratch.ipynb  2018-04-11_peewee_scratch.ipynb  2018-04-11_peewee_scratch.py  2018-04-18_image_store.ipynb  ha_temporal_via_darren.py  populate_lookup.py
scripts/: measure_storage_dimensions.py  mem_profile_suite.py  memory_flight_report.py  preflight_check.py  score_model.py  storage_dimension_measurements.json  validation.py
submission/: __init__.py  __main__.py  evaluation.py  ml_pool.py  score_model.py  submit_model.py  utils.py
tests/: README.md  __init__.py  conftest.py  download_test_files.sh  flags.py  it_rdm.p  log_decorator.py  test___init__.py  test_activation_assembly_builder.py  test_activation_cache_key.py  test_anatomy.py  test_assemblies.py  test_benchmarks.py  test_examples.py  test_fetch.py  test_imports.py  test_integration.py  test_layer_mapping_explorer.py  test_metrics.py  test_mkgu.py  test_models.py  test_preflight.py  test_public_benchmarks.py  test_pytorch_wrapper.py  test_stimuli.py  test_subject_conformance.py  test_unified_adapter.py  test_utils.py  test_xarray_utils.py
todotests/: test_assemblies.py  test_examples.py  test_stimuli.py
tutorials/: create_xarray.py
(+6225 files in other folders)
